--- a/src/parts/Demo/Demo.module.scss
+++ b/src/parts/Demo/Demo.module.scss
@@ -1,3 +1,16 @@
-.poster{
+.frame-poster{
     width: 100%;
+    height: 854px;
+}
+.poster{
+    // width: 100%;
+    background-image: url("~src/assets/images/avtDemowebp.webp");
+    background-size: 100% auto;
+    background-repeat: no-repeat
+
+}
+.info-poster{
+    width: 550px;
+    height: 550px;
+    background-color: black;
 }
