--- a/src/component/GlobalStyles/GlobalStyles.scss
+++ b/src/component/GlobalStyles/GlobalStyles.scss
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,400&family=Poppins:wght@400;500&display=swap');
 
 :root{
-    --text-color: white
+    --text-color: white;
+    --text-color-menu: #ccc;
 }
 *{
     box-sizing: border-box;
@@ -14,5 +15,5 @@ html{
 }
 body{
     font-family: 'Poppins', sans-serif;
-    font-size: 1.6rem;
+    font-size: 1.3rem;
 }
