--- a/src/parts/Demo/Demo.module.scss
+++ b/src/parts/Demo/Demo.module.scss
@@ -1,16 +1,48 @@
+.poster{
+    width: 100%;
+}
 .frame-poster{
     width: 100%;
     height: 854px;
-}
-.poster{
-    // width: 100%;
-    background-image: url("~src/assets/images/avtDemowebp.webp");
-    background-size: 100% auto;
-    background-repeat: no-repeat
-
+    position: relative;
 }
 .info-poster{
+    position: absolute;
+    top: 190px;
+    left: 60px;
     width: 550px;
     height: 550px;
-    background-color: black;
+}
+.title-logo{
+    width: 100%;
+    margin-bottom: 20px;
+    object-fit: cover;
+}
+.description{
+    font-weight: 400;
+    font-size: 18.5px;
+    color: var(--text-color);
+}
+.play-info{
+    margin-top: 23px;
+}
+.play-video{
+    width: 130px;
+    height: 46px;
+    margin: 0px 11.5px 11.5px 0;
+}
+.information{
+    width: 218px;
+    height: 46px;
+    margin: 0px 11.5px 11.5px 0;
+}
+.sound-rating{
+    display: flex;
+    font-size: 30px;
+}
+.sound{
+
+}
+.rating{
+    
 }
