--- a/src/parts/Header/Header.module.scss
+++ b/src/parts/Header/Header.module.scss
@@ -1,32 +1,37 @@
+//header///////////////////
 .menu-main{
-    position: relative;
+    background: linear-gradient(180deg,rgba(0,0,0,.7) 10%,transparent);
+    transition: background-color 1s;
     position: fixed;
+    padding: 0px 60px;
     width: 100%;
     height: 68px;
-    padding: 0px 60px;
-    background-color: transparent;
-    background-image: linear-gradient(180deg,rgba(0,0,0,.7) 10%,transparent);
+    z-index: 1;
 }
+.black-nav{
+    transition: background-color 0.4s;
+    background-color: rgb(20, 20, 20);
+}
+//////////////////////////
 .menu-left{
     position: relative;
-    display: block;
     width: 670px;
     height: 100%;
 }
 .logo{
     position: absolute;
-    display: flex;
     height: 60px;
     margin: 0px -12px ;
     padding-top: 10px ;
 }
+////////
 .table-nav{
+    color: var(--text-color);
+    align-items: center;
+    display: flex;
     margin-left: 125px;
     width: 700px;
     height: 100%;
-    align-items: center;
-    display: flex;
-    color: var(--text-color);
 }
 .tab-nav{
     display: inline;
@@ -34,38 +39,49 @@
     font-size: 14px;
     font-weight: 400;
 }
+///////////////////////////
 .menu-right{
     position: absolute;
-    align-items: center;
-    // display: block;
     display: flex;
-    width: 137px;
+    align-items: center;
     height: 100%;
     right: 0px;
     top: 0px;
     right: 60px;
 }
-.icon-search{
+.icon-nav-main{
+    color: var(--text-color);
     margin-right: 20px;
     width: 24px;
     height: 24px;
-    color: var(--text-color);
 }
+.search{
+    display: flex;
+}
+.notification{
+}
+/////
 .account{
     display: flex;
 }
 .avatar{
+    cursor: pointer;
+
     border-radius: 5px;
     height: 32px;
     width: 32px;
 }
 .icon-up{
+    cursor: pointer;
+    transition: transform 367ms cubic-bezier(.21,0,.07,1);
     color: var(--text-color);
     margin-left: 7px;
     margin-top: 9px;
 }
+
 .account:hover .icon-up{
+    transition: transform 367ms cubic-bezier(.21,0,.07,1);
     transform: rotate(180deg);
     transform-origin: 50% 50%;
-    transition: transform 367ms cubic-bezier(.21,0,.07,1);
 }
+///////////////////////
