--- a/src/component/GlobalStyles/GlobalStyles.scss
+++ b/src/component/GlobalStyles/GlobalStyles.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,400&family=Poppins:wght@400;500&display=swap');
 
 :root{
-    --text-color: white;
+    --text-color: #E5E5E5;
     --text-color-menu: #ccc;
 }
 *{
@@ -17,5 +17,5 @@ body{
     font-family: 'Poppins', sans-serif;
     font-size: 1.3rem;
     background-color: #141414;
-
+    overflow-x: hidden;
 }
