--- a/src/component/GlobalStyles/GlobalStyles.scss
+++ b/src/component/GlobalStyles/GlobalStyles.scss
@@ -18,4 +18,7 @@ body{
     font-size: 1.3rem;
     background-color: #141414;
     overflow-x: hidden;
+    ul{
+        list-style: none;
+    }
 }
