--- a/src/parts/Header/Header.module.scss
+++ b/src/parts/Header/Header.module.scss
@@ -6,7 +6,7 @@
     padding: 0px 60px;
     width: 100%;
     z-index: 10;  
-    height: fit-content;
+    top: 0px;
     .menu-main{
         height: 68px;
         .logo{
