--- a/src/component/Slide/ListItem/ListItem.module.scss
+++ b/src/component/Slide/ListItem/ListItem.module.scss
@@ -1,10 +1,10 @@
 .list-item{ 
     position: relative;
+    // display: flex;
     width: 225px;
     aspect-ratio: 16/9;
-    margin-right: 5px;
+    padding-right: 5px;
     cursor: pointer;
-    // overflow: hidden;
     img{
         width: 100%;
         object-fit: cover;
