--- a/src/parts/Screen/ScreenItem/ScreenItem.module.scss
+++ b/src/parts/Screen/ScreenItem/ScreenItem.module.scss
@@ -14,7 +14,7 @@
             width: 100%;
             justify-content: space-between;
             .movie-item{
-                margin-bottom: 70px;
+                margin-top: 60px;
             }
         }
     }
