--- a/src/component/Slide/ListItem/ListItem.module.scss
+++ b/src/component/Slide/ListItem/ListItem.module.scss
@@ -1,9 +1,8 @@
 .list-item{ 
     position: relative;
-    // display: flex;
-    width: 225px;
+    overflow-x: visible;
+    width: 227px;
     aspect-ratio: 16/9;
-    padding-right: 5px;
     cursor: pointer;
     img{
         width: 100%;
