--- a/src/component/Slide/Slide/Slide.module.scss
+++ b/src/component/Slide/Slide/Slide.module.scss
@@ -3,11 +3,11 @@
     margin-top: 50px;
     padding-left: 60px;
     .title-slide{
-        color: var(--text-color);
         font-size: 20px;
         font-weight: 500;
         a{
             display: flex;
+            color: var(--text-color);   
             .header-more-title{
                 display: flex;
                 height: 15px;
@@ -43,7 +43,8 @@
             font-size: 40px;
             padding: 20px;
             color: var(--text-color);
-            width: 60px;
+            width: 54px;
+            border-radius: 3px;
             height: 100%;
             background-color: hsla(0,0%,8%,.5);
             z-index: 4;
@@ -64,3 +65,4 @@
         }
     }
 }
+
