--- a/src/component/GlobalStyles/GlobalStyles.scss
+++ b/src/component/GlobalStyles/GlobalStyles.scss
@@ -21,6 +21,8 @@ body{
     ul{
         list-style: none;
     }
+    -webkit-user-select: none;
+    user-select: none;
 }
 
 /////////////////////////////////////////////////////
