--- a/src/component/OverviewSignUp/OVSignUp.module.scss
+++ b/src/component/OverviewSignUp/OVSignUp.module.scss
@@ -1,6 +1,6 @@
 .wrapper-overview-sign-up{
     display: flex;
-    width: 1170px;
+    width: 100%;
     margin: 0 auto ;
     padding: 72px 0;
     align-items: center;
