--- a/src/parts/Header/HeaderMain/Header.module.scss
+++ b/src/parts/Header/HeaderMain/Header.module.scss
@@ -25,6 +25,7 @@
                 cursor: pointer;
                 display: inline;
                 .tab-item{
+                    text-decoration: none;
                     transition: all 0.4s;
                     font-size: 14px;
                     padding-left: 13px;
