--- a/src/parts/Screen/SignInScreen/SignInScreen.module.scss
+++ b/src/parts/Screen/SignInScreen/SignInScreen.module.scss
@@ -1,6 +1,7 @@
 .wrapper-sign-in-screen{
     width: 100%;
-    height: auto;
+    height:100%;
+    overflow: hidden;
     .logo{
         position: relative;
         z-index: 10;
