--- a/src/component/GlobalStyles/GlobalStyles.scss
+++ b/src/component/GlobalStyles/GlobalStyles.scss
@@ -1,6 +1,5 @@
 @import "normalize.css";
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,400&family=Poppins:wght@400;500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600;700&display=swap');
 :root{
     --text-color: #E5E5E5;
     --text-color-menu: #ccc;
@@ -26,6 +25,7 @@ body{
     // Link{
     //     text-decoration: none
     // }
+
 }
 
 /////////////////////////////////////////////////////
