--- a/src/component/LogInBoard/LogInBoard.module.scss
+++ b/src/component/LogInBoard/LogInBoard.module.scss
@@ -1,10 +1,11 @@
 .wrapper-log-in-board{
     width: 450px;
-    height: 660px;
+    height: 640px;
     padding: 50px;
     background-color: rgba(0,0,0,.75);
     display: block;
     border-radius: 5px;
+    margin-top: 100px;
     h1{
         color: #FFFFFF;
         font-size: 32px;
@@ -22,6 +23,7 @@
         }
         .title{
             position: absolute;
+            pointer-events: none;
             left: 0;
             font-size: 15px;
             top: 15px;
@@ -119,8 +121,8 @@
         }
     }
     .register{
-        margin-top: 70px;
-        display: flex;
+        margin-top: 40px;
+        display: block;
         justify-content: center;
         font-size: 15px;
         color: #737373;
@@ -132,6 +134,34 @@
             text-decoration: none;
             &:hover{
                 text-decoration: underline;
+            }
+        }
+        .info-{
+            margin-top: 15px;
+            font-size: 13px;
+            p{
+                margin-bottom: 1px;
+                .more{
+                    cursor: pointer;
+                    margin-left: 3px;
+                    background-color: transparent;
+                    border: none;
+                    color: #FFFFFF;
+                }
+            }
+            .show{
+                display: none;
+            }
+            span{
+                display: block;
+                margin-top: 10px;
+                a{
+                    margin: 0 4px;
+                    font-size: 12px;
+                    color: #FFFFFF;
+                    text-decoration: none;
+                    cursor: pointer;
+                }
             }
         }
     }
