--- a/src/pages/SignIn/SignIn.module.scss
+++ b/src/pages/SignIn/SignIn.module.scss
@@ -1,11 +1,12 @@
 .wrapper-sign-in{
     position: relative;
-    background: rgb(0 0 0 / 40%);
-    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.8) 100%);
+    width: 100%;
+    height: 100%;
     img{
         position: relative;
         top: -100px;
-        width: 100%;
+        object-fit: cover;
+        height: 100%;
     }
     .dark-img{
         position: absolute;
@@ -16,6 +17,5 @@
         justify-content: center;
         background: rgb(0 0 0 / 40%);
         background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.8) 100%);
-        align-items: center;
     }
 }
