--- a/src/parts/Footer/FooterSignIn/FooterSignIn.module.scss
+++ b/src/parts/Footer/FooterSignIn/FooterSignIn.module.scss
@@ -1,6 +1,47 @@
 .wrapper-footer-sign-in{
-    position: absolute;
+    position: relative;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    height: 300px;
-    background-color: antiquewhite;
+    .wrapper-footer{
+        width: 1170px;
+        margin: 100px auto;
+        position: relative;
+        display: block;
+        margin-top: -400px;
+        background-color: transparent;
+        .link-{
+            text-decoration: none;
+            color: #FFFFFF;
+            font-size: 13px;
+            &:hover{
+                text-decoration: underline;
+            }
+        }
+        .ques{
+            .link-{
+                font-size: 15px;
+            }
+        }
+        .list-sp{
+            margin: 20px 0;
+            .list{
+                display: flex;
+                flex-wrap: wrap;
+                flex-direction: row;
+                align-items: flex-end ;
+                width: 1170px;
+                .item-sp{
+                    margin-bottom: 10px;
+                    flex-basis: 25%;
+                }
+            }
+        }
+        select{
+            color: #FFFFFF;
+            width: 100px;
+            height: 30px;
+            background-color: transparent;
+        }
+    }
 }
