--- a/src/parts/Screen/HomeScreen/HomeScreeen.module.scss
+++ b/src/parts/Screen/HomeScreen/HomeScreeen.module.scss
@@ -1,4 +1,10 @@
 .wrapper-home-screen{
     .wrapper-childrem{
     }
+    .overlay{
+        
+    }
+    .wrapper-footer{
+        margin-top: 150px;
+    }
 }
