--- a/src/component/BillBoard/BillBoard.module.scss
+++ b/src/component/BillBoard/BillBoard.module.scss
@@ -6,6 +6,7 @@
         .poster{
             width: 100%;
             height: auto;
+            user-select: none;
         }
         .info-poster{
             position: absolute;
@@ -117,7 +118,7 @@
                 align-items: center;
                 box-sizing: border-box;
                 font-size: 17px;
-                height: 2.4vw;
+                height: 35px;
                 color: var(--text-color-menu);
                 .age{
 
@@ -125,6 +126,7 @@
             }
         }
         .shadow{
+            user-select: none;
             position: absolute;
             width: 100%;
             bottom: 0px;
@@ -140,10 +142,90 @@
 }
 // 70%pc
 @media screen and (min-width: 46.25em) and (max-width:63.9375em ) {
-    
+    .wrapper-bill-board{
+        .wrapper-banner{
+            .info-poster{
+                .description{
+                    font-size: 16px;
+                }
+                .play-info{
+                    position: relative;
+                    z-index: 1;
+                    .play-video{
+                        width: 120px;
+                        height: 35px;
+                        .icon-play{
+                            width: 25px;
+                            height: 25px;
+                        }
+                        .title-play{
+                            font-size: 14px;
+                        }
+                    }
+                    .information{
+                        width: 150px;
+                        height: 35px;
+                        .icon-info{
+                            width: 25px;
+                            height: 25px;
+                        }
+                        .title-info{
+                            font-size: 14px;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 ///tablet
 @media screen and (max-width:46.1875em ) {
-    
+    .wrapper-bill-board{
+        .wrapper-banner{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            .info-poster{
+                
+                .description{
+                    display: none;
+                }
+                .title-logo{
+                    position: relative;
+                    bottom: 0;
+                    display: flex;
+                }
+                .play-info{
+                    display: flex;
+                    position: relative;
+                    bottom: -50px;
+                    z-index: 1;
+                    .play-video{
+                        width: 120px;
+                        height: 35px;
+                        .icon-play{
+                            width: 25px;
+                            height: 25px;
+                        }
+                        .title-play{
+                            font-size: 14px;
+                        }
+                    }
+                    .information{
+                        width: 150px;
+                        height: 35px;
+                        .icon-info{
+                            width: 25px;
+                            height: 25px;
+                        }
+                        .title-info{
+                            font-size: 14px;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
   
