--- a/src/component/GlobalStyles/GlobalStyles.scss
+++ b/src/component/GlobalStyles/GlobalStyles.scss
@@ -32,7 +32,8 @@ body{
 .slick-slide{
 }
 .slick-list {
-    padding-left: 60px;
+    // padding-left: 60px;
+    // padding-right:  60px;
     overflow: visible ;
 }
 
