--- a/src/parts/Header/HeaderSignUp/HeaderSignUp.module.scss
+++ b/src/parts/Header/HeaderSignUp/HeaderSignUp.module.scss
@@ -1,6 +1,6 @@
 .wrapper-header-sign-up{
     position: relative;
-    width: 1170px;
+    width: 90%;
     height: 86px;
     margin: 0 auto;
     display: flex;
