--- a/src/parts/Screen/TypeScreen/ScreenItem/ScreenItem.module.scss
+++ b/src/parts/Screen/TypeScreen/ScreenItem/ScreenItem.module.scss
@@ -2,18 +2,18 @@
     position: relative;
     margin-top: 136px;
     width: 100%;
-    height: 500px;
     padding: 0 60px;
     .sub-screen{
         width: 100%;
         height: 100%;
         .list-movie{
+            // justify-content: space-between;
             display: flex;
             flex-wrap: wrap;
             flex-direction: row;
             width: 100%;
-            justify-content: space-between;
             .movie-item{
+                flex-basis: 16.66666667%;
                 margin-top: 60px;
             }
         }
