--- a/src/component/BillBoard/BillBoard.module.scss
+++ b/src/component/BillBoard/BillBoard.module.scss
@@ -11,54 +11,75 @@
         .info-poster{
             position: absolute;
             width: 35%;
-            top: 20%;
+            bottom: 30%;
             left: 4%;
             height: auto;
             display: block;
-            .title-logo{
-                position: relative;
-                display: flex;
-                top: 0;
-                width:100%;
-                margin-bottom: 20px;
-                object-fit: cover;
+            &:hover .content{
+                transform: translateY(0px);
+                transition-delay: .4s;
             }
-            .description{
-                position: relative;
-                font-weight: 400;
-                font-size: 18.5px;
-                color: var(--text-color);
+            &:hover .content .description{
+                transition-delay: .4s;
+                opacity: 1;
+                visibility: visible;
+            }
+            .content{
+                transform: translateY(80px);
+                transition: all .4s ease;
+                .title-logo{
+                    position: relative;
+                    display: flex;
+                    top: 0;
+                    width:100%;
+                    margin-bottom: 20px;
+                    object-fit: cover;
+                }
+                .description{
+                    transition: all .2s ease;
+                    visibility: hidden;
+                    opacity: 0;
+                    position: relative;
+                    font-weight: 400;
+                    font-size: 18.5px;
+                    color: var(--text-color);
+                }
             }
             .play-info{
                 display: flex;
                 margin-top: 23px;
-                .play-video{
-                    width: 130px;
-                    height: 46px;
-                    cursor: pointer;
-                    display: flex;
-                    background-color: white;
-                    justify-content: center;
-                    align-items: center;
-                    border: 0px;
-                    border-radius: 4px;
-                    margin: 0px 11.5px 11.5px 0;
-                    &:hover{
-                        background-color: #FFFFFFBF;
-                    }
-                    .icon-play{
-                        margin-right: 10px;
-                        width: 30px;
-                        height: 30px;
-                    }
-                    .title-play{
-                        font-size: 18px;
-                        font-weight: 600;
+                .link-{
+                    text-decoration: none;
+                    .play-video{
+                        width: 130px;
+                        height: 46px;
+                        cursor: pointer;
+                        display: flex;
+                        z-index: 1;
+                        background-color: white;
+                        justify-content: center;
+                        align-items: center;
+                        border: 0px;
+                        border-radius: 4px;
+                        margin: 0px 11.5px 11.5px 0;
+                        &:hover{
+                            background-color: #FFFFFFBF;
+                        }
+                        .icon-play{
+                            margin-right: 10px;
+                            width: 30px;
+                            height: 30px;
+                        }
+                        .title-play{
+                            font-size: 18px;
+                            font-weight: 600;
+                        }
                     }
                 }
                 .information{
                     cursor: pointer;
                     display: flex;
+                    z-index: 1;
                     background-color:rgba(109, 109, 110, 0.7);;
                     border-radius: 4px;
                     border: 0px;
@@ -88,27 +109,7 @@
             position: absolute;
             display: flex;
             right: 0px;
-            bottom: 25%;
-            .circle-rotate{
-                background-color: none;
-                margin-right: 16px;
-                padding: auto;
-                position: relative;
-                height: 40px;
-                width: 40px;
-                background-color: transparent;
-                border-radius: 50%;
-                border: 1px solid rgba(255, 255, 255, 0.7);
-                &:hover{
-                    background-color: rgba(255, 255, 255, 0.1);
-                }
-                .rotate{
-                    position: absolute;
-                    top: 7.5px;
-                    left: 7.5px;
-                    color: var(--text-color);
-                }
-            }
+            bottom: 30%;
             .rating{
                 display: flex;
                 background-color: rgba(51,51,51,.6);
