--- a/src/component/Modal/Modal.module.scss
+++ b/src/component/Modal/Modal.module.scss
@@ -1,7 +1,6 @@
 .wrapper-modal{
     position: fixed;
     display: flex;
-    align-items: center;
     justify-content: center;
     top: 0;
     bottom: 0;
@@ -9,210 +8,229 @@
     right: 0;
     z-index: 10;
     background-color: rgba(0,0,0,0.7);
-    .container{
-        border-radius: 5px;
-        position: relative;
-        display: flex;
-        width: 75%;
-        height: 70%;
-        min-height: 480px;
-        background-color: #181818;
-        .trailer{
-            width: 55%;
-            height: 100%;
-            position: relative;
+    overflow-y: scroll;
+    &::-webkit-scrollbar {
+        display: none;
+    }
+        .container{
             display: block;
-            .movie{
-                position: relative;
-                object-fit: cover;
+            position: relative;
+            border-radius: 5px;
+            background-color: #181818;
+            width: 60%;
+            height: max-content;
+            margin: 60px 0;
+            box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+            .trailer{
                 width: 100%;
-                top: 0px;
-                display: flex;
-                .poster{
-                    display: flex;
-                    width: 100%;
+                .movie{
+                    position: relative;
                     object-fit: cover;
-                    border-radius: 5px;
+                    width: 100%;
+                    top: 0px;
+                    display: flex;
+                    .poster{
+                        display: flex;
+                        width: 100%;
+                        object-fit: cover;
+                        border-radius: 5px;
+                    }
+                    .exit{
+                        position: absolute;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        cursor: pointer;
+                        right: 0;
+                        top: 0;
+                        margin: 10px;
+                        width: 30px;
+                        height: 30px;
+                        border-radius: 50%;
+                        font-size: 20px;
+                        border: none;
+                        color: rgb(179, 178, 178);
+                        background-color: rgba(0,0,0,0.5);
+                        transition: all .4s ease;
+                        &:hover{
+                            color: #cdc8c8;
+                        }
+
+                    }
+                    .action{
+                        position: absolute;
+                        height: fit-content;
+                        bottom: 5%;
+                        left: 3%;
+                        width: 40%;
+                        display: block;
+                        z-index: 1;
+                        .title{
+                            width: 100%;
+                            margin-bottom: 20px;
+                        }
+                        .btn-{
+                            display: flex;
+                            .link-{
+                                text-decoration: none;
+                                .play{
+                                    width: 130px;
+                                    height: 46px;
+                                    cursor: pointer;
+                                    display: flex;
+                                    background-color: white;
+                                    justify-content: center;
+                                    align-items: center;
+                                    border-radius: 4px;
+                                    border: none;
+                                    transition: all 0.2s linear;
+                                    opacity: 1;
+                                    &:active{
+                                        opacity: .7;
+                                    }
+                                    .icon{
+                                        width: 28px;
+                                        height: 28px;
+                                        margin-right: 5px;
+                                    }
+                                    span{
+                                        font-size: 20px;
+                                        font-weight: 700;
+                                        color: #141414;
+                                    }
+                                }
+                            }
+                            .btn-icon{
+                                border: 1px solid gray;
+                                border-radius: 50%;
+                                width: 46px;
+                                height: 46px;
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                                cursor: pointer;
+                                opacity: 1;
+                                transition: all 0.1s ease;
+                                margin-left: 5px;
+                                background-color: rgba(0,0,0,0.3);
+                                &:active{
+                                    opacity: .5;
+                                }
+                                .icon{
+                                    width: 27px;
+                                    height: 27px;
+                                }
+                            }
+                            
+                        }
+                    }
+                    .over-bt{
+                        position: absolute;
+                        width: 100%;
+                        height: 20px;
+                        bottom: 0;
+                        background-image: linear-gradient(180deg,hsla(0,0%,8%,0) 0,hsla(0,0%,8%,.15) 15%,hsla(0,0%,8%,.35) 29%,hsla(0,0%,8%,.58) 44%,#141414 68%,#181818);
+                    }
                 }
                 
-                .action{
-                    position: absolute;
-                    height: fit-content;
-                    bottom: 5%;
-                    left: 3%;
+            }
+            .intro{
+                width: 100%;
+                display: flex;
+                padding: 20px;
+                .infomation{
+                    position: relative;
+                    width: 57%;
+                    left: 0;
+                    h2{
+                        color: #ffffff;
+                        font-size: 29px;
+                        font-weight: 700;
+                    }
+                    .content-info{
+                        display: block;
+                        width: 100%;
+                        margin: 10px 0px;
+                        .movie-info{
+                            display: flex;
+                            .match{
+                                font-size: 18px;
+                                font-weight: 700;
+                                color: rgb(103, 206, 103);
+                                margin-right: 10px;
+                            }
+                            .rate{
+                                width: 30px;
+                                height: 17px;
+                                border: 1px solid #fff;
+                                color: #fff;
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                                margin-right: 10px;
+                                font-size: 14px;
+                            }
+                            .time{
+                                color: #fff;
+                                font-size: 15px;
+                                margin-right: 10px;
+                            }
+                            .video-qa{
+                                color: #fff;
+                                font-size: 14px;
+                                width: 25px;
+                                height: 17px;
+                                border: 1px solid #fff;
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                            }
+                        }
+                        .content{
+                            margin-top: 10px;
+                            p{
+                                font-size: 16px;
+                                color: var(--text-color);
+                            }
+                        }
+                    }
+                }
+                .intro-movie{
+                    position: relative;
+                    right: 0;
                     width: 40%;
                     display: block;
-                    z-index: 1;
-                    .title{
+                    .author-actor{
+                        display: block;
                         width: 100%;
-                    }
-                    .btn-{
-                        display: flex;
-                        .btn-icon{
-                            border: 1px solid gray;
-                            border-radius: 50%;
-                            width: 50px;
-                            height: 50px;
-                            display: flex;
-                            align-items: center;
-                            justify-content: center;
-                            cursor: pointer;
-                            opacity: .7;
-                            transition: all 0.4s ease;
-                            margin-right: 5px;
-                            &:hover{
-                                opacity: 1;
-                            }
-                            &:active{
-                                opacity: .7;
-                            }
-                            .icon{
-                                width: 28px;
-                                height: 28px;
-                            }
-
-                        }
-                        .l-p{
-                            background-color: rgba(0,0,0,0.3);
-                        }
-                    }
-                }
-                .over-bt{
-                    position: absolute;
-                    width: 100%;
-                    height: 20px;
-                    bottom: 0;
-                    background-image: linear-gradient(180deg,hsla(0,0%,8%,0) 0,hsla(0,0%,8%,.15) 15%,hsla(0,0%,8%,.35) 29%,hsla(0,0%,8%,.58) 44%,#141414 68%,#181818);
-                }
-            }
-            .infomation{
-                width: 100%;
-                position: relative;
-                bottom: 0;
-                .content-info{
-                    display: block;
-                    padding: 5px;
-                    width: 100%;
-                    .movie-info{
-                        padding: 10px;
-                        display: flex;
-                        .match{
-                            font-size: 18px;
-                            font-weight: 700;
-                            color: rgb(103, 206, 103);
-                            margin-right: 10px;
-                        }
-                        .rate{
-                            width: 30px;
-                            height: 17px;
-                            border: 1px solid #fff;
-                            color: #fff;
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
-                            margin-right: 10px;
+                        margin-top: 40px;
+                        .author{
                             font-size: 14px;
+                            color: var(--text-color);
+                            margin-bottom: 10px;
                         }
-                        .time{
-                            color: #fff;
-                            font-size: 15px;
-                            margin-right: 10px;
-                        }
-                        .video-qa{
-                            color: #fff;
+                        .actor{
                             font-size: 14px;
-                            width: 25px;
-                            height: 17px;
-                            border: 1px solid #fff;
-                            display: flex;
-                            align-items: center;
-                            justify-content: center;
+                            height: fit-content;
+                            color: var(--text-color);
+                            span{
+                                color: #cdc8c8;
+                                text-decoration: none;
+                               
+                            }
                         }
-                    }
-                    .content{
-                        p{
-                            padding: 10px;
-                            font-size: 16px;
-                            color: #bfbfbf;
-                        }
-                    }
-                }
-            }
-        }
-        .intro{
-            width: 45%;
-            height: 100%;
-            position: relative;
-            display: block;
-            .intro-movie{
-                position: absolute;
-                top: 0;
-                width: 100%;
-                height: 35%;
-                display: block;
-                justify-content: flex-start;
-                padding: 10px;
-                h2{
-                    color: #ffffff;
-                    font-size: 23px;
-                    font-weight: 400;
-                }
-                .author-actor{
-                    height: inherit;
-                    display: flex;
-                    width: 100%;
-                    margin-top: 10px;
-                    .actor{
-                        width: 60%;
-                        font-size: 14px;
-                        height: fit-content;
-                        color: #bfbfbf;
-                    }
-                    .author{
-                        position: absolute;
-                        right: 0;
-                        width: 35%;
-                        font-size: 14px;
-                        color: #bfbfbf;
+                        
+                        
                     }
                     
                 }
                 
             }
-            .exit{
-                position: absolute;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                cursor: pointer;
-                right: 0;
-                top: 0;
-                margin: 1%;
-                width: 30px;
-                height: 30px;
-                border-radius: 50%;
-                font-size: 20px;
-                border: none;
-                color: rgb(120, 120, 120);
-                background-color: rgba(0,0,0,0.5);
-                transition: all .4s ease;
-                &:hover{
-                    color: #cdc8c8;
-                }
-                &:active{
-                    opacity: 0.6;
-                }
-            }
-            .content-similar{
-                position: absolute;
-                bottom: 0;
-                width: 100%;
-                height: 65%;
-                border: 10px solid gray;
-                padding: 10px;
-            }
         }
-    }
+        .content-similar{
+            width: 100%;
+            height: 500px;
+        }
 }
 
 
