--- a/src/parts/Header/HeaderHome/NavCategory/Category.module.scss
+++ b/src/parts/Header/HeaderHome/NavCategory/Category.module.scss
@@ -20,7 +20,6 @@
         .category{
             height: 30px;
             width: 100px;
-            // margin: 0 30px;
             position: relative;
             display: flex;
             align-items: center;
@@ -35,6 +34,7 @@
                 position: absolute;
                 display: flex;
                 align-items: center;
+                cursor: pointer;
                 span{
                     position: relative;
                     margin-top: 2px;
@@ -56,15 +56,12 @@
             .show-2:checked ~ .list-category{
                 transform: translateY(0%);
                 opacity: 1;
-                // display: block;
             }
-            
             .list-category{
                 transition: all .5s;
                 position:absolute;
                 transform: translateY(-160%);
                 opacity: 0;
-                // display: none;
                 top: 30px;
                 width: 800px;
                 background-color: rgba(0,0,0,.9);
